[package]
name = "hyperdb"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datrs/hyperdb"
documentation = "https://docs.rs/hyperdb"
description = "Distributed, scalable database"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]

[dev-dependencies]
clippy = "0.0"
